ADEN-12656 Fixing styles on mobile

--- a/src/platforms/news-and-ratings/gamespot/styles.scss
+++ b/src/platforms/news-and-ratings/gamespot/styles.scss
@@ -16,7 +16,6 @@
 
 			@include uap-porvata();
 			@include uap-porvata-learn-more();
-			@include uap-porvata-right-position();
 
 			@include uap-advertisement-label();
 			@include uap-button-close();
@@ -24,6 +23,10 @@
 			&.is-dark {
 				@include uap-dark-theme();
 			}
+		}
+
+		#skybox-nav {
+			@include uap-porvata-right-position();
 		}
 	}
 
